--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "Michael Gomes",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "mongoose": "^6.4.4"
   },
   "devDependencies": {
     "concurrently": "^7.2.2",
